--- a/style.css
+++ b/style.css
@@ -57,15 +57,20 @@ body{
     list-style: none;
 }
 .nav-items a{
-    color: #FF5400;
+    color: #424247;
     text-align: center;
     font-size: 1.125rem;
-    font-weight: 700;
+    font-weight: 400;
     text-decoration: none;
+}
+.nav-items li:first-child a{
+    color: #FF5400;
+    font-weight: 700;
 }
 .menu-icon{
     display: none;
 }
+
 
 /* Header Explore Section */
 .explore-container{
@@ -217,11 +222,140 @@ body{
     justify-content: center;
     align-items: center;
 }
+/* Why Choose Us */
+.reasons-container{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    margin-top: 48px;
+}
+.reason1{
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+}
+.reason2{
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+}
+.reason3{
+    border-radius: 16px;
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+    grid-column: span 2;
+    margin-top: 48px;
+}
+.reason1, .reason2, .reason3{
+    width: 573px;
+    padding: 32px 55px 32px 32px;
+}
+.reason-title{
+    color: #131318;
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-top: 32px;
+    margin-bottom: 16px;
+}
+.reason-para{
+    color: #5A5A5D;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+}
 
+/* Newsletter Section */
+.newsletter{
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+}
+.newsletter-form{
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    width: 574px;
+    height: auto;
+    padding: 40px;
+}
+.newsletter-img img{
+    width: 772px;
+    height: 422px;
+}
+.newsletter-title{
+    color: #131318;
+    font-size: 1.5rem;
+    font-weight: 800;
+}
+.newsletter-para{
+    color: #5A5A5D;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+    width: 350px;
+    margin-top: 16px;
+    margin-bottom: 24px;
+}
+.news-inp{
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 16px 20px;
+    width: 90%;
+    margin-bottom: 16px;
+    border: 0;
+}
+.subscribe{
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.25rem;
+    font-weight: 800;
+    padding: 14px 20px;
+    width: 98%;
+    border: 0;
+    margin-top: 8px ;
+}
+.newsletter-img{
+    position: relative;
+}
+.savings{
+    border-radius: 8px;
+    background: #FF5400;
+    padding: 35px;
+    width: 324px;
+    transform: rotate(-19.628deg);
+    text-align: center;
+    position: absolute;
+    left: 367px;
+    top: 220px;
+}
+.save-para{
+    color: #FFF;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+.save-title{
+    color: #FFF;
+    font-size: 2rem;
+    font-weight: 800;
+}
 /* Mobile View */
 @media screen and (max-width: 600px) {
     body{
         margin: 20px 40px;
+    }
+
+    /* Common */
+    .section-title{
+        font-size: 1.25rem;
+    }
+    .section-description{
+        font-size: 0.875rem;
     }
 
     /* Nav and Title */
@@ -286,5 +420,55 @@ body{
     .width{
         width: 435px;
         height: 176px;
+    }
+
+    /* Why Choose Us */
+    .reasons-container{
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-top: 16px;
+    }
+    .reason1, .reason2, .reason3{
+        width: 335px;
+        padding: 32px 55px 32px 32px;
+    }
+    .reason3{
+        margin: 0;
+    }
+    .reason-title{
+        font-size: 1.25rem;
+        margin-top: 16px;
+    }
+    .reason-para{
+        color: #5A5A5D;
+        font-size: 0.875rem;
+        font-weight: 400;
+        line-height: 24px;
+    }
+    .reason1 img, .reason2 img, .reason3 img{
+        width: 48px;
+        height: 48px;
+    }
+
+    /* Newsletter Responsive */
+    .newsletter{
+        flex-direction: column;
+    }
+    .newsletter-form{
+        border-radius: 16px;
+        border: 1px solid #FF5400;
+        width: 384px;
+        height: auto;
+        padding: 40px;
+    }
+    .newsletter-img img{
+        width: 100%;
+    }
+    .savings {
+        padding: 35px;
+        width: 254px;
+        left: 117px;
+        top: 232px;
     }
 }
