--- a/style.css
+++ b/style.css
@@ -368,8 +368,7 @@ header, main{
 }
 .btn-packages{
     margin-top: 48px;
-    justify-content: center;
-    display: flex;
+    text-align: center;
 }
 
 
